TEST_PROGRAMS/VALID/05/func_decs_short.go
/* Function declarations. */

package main

// Short form
func f2(a, b float64, s string, c, d int) int {
	return c + d
}

func main() {
	// Do nothing
}
