TEST_PROGRAMS/INVALID/05/func_args_ending_in_comma.go
/* Function arguments in declaration ending in a comma. */

package main

func foo(a, b int, c float64,) {} // Error: Can't end argument list on a comma.

func main() {
	// Do nothing.
}
